# learning-new-skills

./: .gitignore  LICENSE  README.md  compare_rollouts.py  plot_correctness.py  pyproject.toml
docker/actor/: Dockerfile  entrypoint.py
docker/llm/: Dockerfile  entrypoint.py
prompts/: actor_system.txt  actor_task.txt  evaluator_benchmark_system.txt  evaluator_system.txt  evolver_system.txt
src/skill_rl/: actor.py  config.py  docker_utils.py  evaluator.py  evolver.py  gaia.py  generalization_test.py  llm.py  main.py  metrics.py  skills.py
visualizations/: beta_comparison.py  beta_comparison_2.py  beta_comparison_3.py  beta_landscape.py  binomial_landscape.py  plot_correctness.py  plot_eval_vs_accuracy.py
