[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-rl"
version = "0.2.0"
description = "Reinforcement learning system for evolving agent skill files"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.0",
    "datasets>=2.19",
    "huggingface-hub>=0.23",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "litellm[google]>=1.0",
]

[project.scripts]
skill-rl = "skill_rl.main:main"

[tool.setuptools.packages.find]
where = ["src"]
